# cp-templates-cpp

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md  TODO.txt  compile_commands.json  expand.py  generate_test_case.cpp  generate_test_case_t.cpp  gt_sol.cpp  input.txt  main.cpp  next_perf_backup.cpp  output  output.txt  output_gt.txt  prime.cpp  problem_solving_manual.md  sol_checker.cpp  sqrt_decomp_clarity.cpp  template.cpp  template_gcj.cpp  tle_backup.cpp  uptodate.cpp
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cf_main  cmake_install.cmake  repro
build_tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_BIT  test_BIT[1]_include.cmake  test_BIT[1]_tests.cmake
cf-lib/: 2SAT.h  ArgSort.h  BIT.h  BinSearch.h  BlockedList.h  CartesianTree.h  ChunkedLinkedList.h  CombinatorialNumber.h  Combinatorics.h  CompareOverload.h  DFS.h  DSU.h  Dijkstra.h  Discretization.h  FracWithMod.h  GCD.h  Graph.h  GraphBase.h  GraphColoring.h  Hash.h  Hashing.h  LinearSieve.h  LongLongWithMod.h  MergeSort.h  ModInteger.h  OperatorOverload.h  PrimeDecomposition.h  PrimeTest.h  RMQBinLifting.h  RandomUtils.h  SCC.h  SegTreeIncomplete.h  SegTreeNodes.h  SegmentTree.h  SieveOfEuler.h  SparseTable.h  StructuredBindingNote.h  TernarySearch.h  TopologicalSort.h  Tree.h  (+4 more)
cf-lib/ds/: BIT.h  BlockedList.h  CartesianTree.h  ChunkedLinkedList.h  DSU.h  RMQBinLifting.h  SegTreeIncomplete.h  SegTreeNodes.h  SegmentTree.h  SparseTable.h  Trie.h  VectorWithOffset.h
cf-lib/graph/: 2SAT.h  DFS.h  Dijkstra.h  Graph.h  GraphColoring.h  SCC.h  TopologicalSort.h  Tree.h
cf-lib/math/: Combinatorics.h  FracWithMod.h  GCD.h  LinearSieve.h  LongLongWithMod.h  PrimeDecomposition.h  PrimeTest.h  TernarySearch.h
cf-lib/misc/: ArgSort.h  BinSearch.h  Discretization.h  MergeSort.h  OperatorOverload.h  RandomUtils.h  StructuredBindingNote.h  timing.h
cf-lib/string/: Hash.h
debugging/: README.md  debug.sh  generate_test_case.cpp  gt_sol.cpp  stress.py
notes/: caveats.md
template/: cp_includes.h  cp_template.h  std_includes.h
tests/: CMakeLists.txt  README.md  polyfill.cpp
tests/ds/: test_BIT.cpp
